# inkDaddy

./: .gitignore  README.md  TODO.md  pyproject.toml
.circleci/: config.yml
docs/: dashboard-schema.md  display-pairing.md  firmware-build-flash-ota.md  home-assistant.md  install.md  manual-test-checklist.md  releases.md  update.md
firmware/xiao_mg24/: README.md
firmware/xiao_mg24/config/: inkdaddy_config.h
firmware/xiao_mg24/src/: app.c  frame_client.c  frame_client.h  inkdaddy_hal.c  inkdaddy_hal.h  ota_client.c  ota_client.h  provisioning_screen.c  provisioning_screen.h
firmware/xiao_mg24/tools/: validate_sisdk.py
hub/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
hub/frontend/src/: App.tsx  styles.css
hub/inkdaddy_hub/: __init__.py  config.py  database.py  main.py  models.py  worker.py
hub/inkdaddy_hub/api/: __init__.py  dashboards.py  devices.py  diagnostics.py  health.py  home_assistant.py  integrations.py  photos.py  settings.py  setup.py  simulator.py  updates.py
hub/inkdaddy_hub/services/: __init__.py  dashboard.py  home_assistant.py  palette.py  photos.py  provisioning.py  rendering.py  secrets.py  security.py  updates.py
installer/: backup.sh  install.sh  restore.sh  uninstall.sh  update.sh
scripts/: build_release_assets.sh  deploy_proxmox_local.sh  display_simulator.py
tests/: __init__.py
tests/fixtures/: sample_dashboard.yaml
tests/integration/: test_api_contract.py
tests/unit/: test_dashboard.py  test_home_assistant.py  test_palette.py  test_provisioning.py  test_updates.py
(+14 files in other folders)
