[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inkdaddy"
version = "0.1.3"
description = "Local-first smart ePaper display hub for Proxmox and XIAO MG24 displays"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "Pillow>=10.3",
  "PyYAML>=6.0",
  "qrcode[pil]>=7.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.setuptools]
package-dir = {"" = "hub"}

[tool.setuptools.packages.find]
where = ["hub"]
include = ["inkdaddy_hub*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["hub"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
